--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,5 @@ board = micro
 framework = arduino
 upload_port = COM11
 lib_deps = seeed-studio/CAN_BUS_Shield@^2.3.3
+monitor_port = COM11
+monitor_speed = 115200
